--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "homepage": "https://NadeevSA.github.io/web-project",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@consta/charts": "^0.7.1",
     "@consta/stats": "^1.1.0",
